# Infinity-Bot

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  LICENSE  PHATNGUOI_SETUP.md  README.md  app.py  fix_auth.py  fix_manager.py  fix_routes.py  index.html  package-lock.json  package.json  pyproject.toml  railway.json  routes.py  setup_secrets.py  start.sh  start_vps.sh  tailwind.config.js  tasks.json  test_db.py  vite.config.ts
.workshop/: context.md  settings.json
dashboard/: index.html  package-lock.json  package.json
dashboard/server/: app.js  config.js  package.json  server.js
dashboard/src/: App.jsx  index.css
owner-admin/: index.html  package-lock.json  package.json  vite.config.js
owner-admin/server/: app.js  config.js  package.json  server.js
owner-admin/src/: App.jsx  index.css
plans/2025-05-13_discord-bot-full/: plan.md
plans/2025-05-14_embeds-ticket-refactor/: plan.md
plans/2025-05-14_ticket-payos-sticky/: plan.md
plans/2025-05-14_ui-overhaul/: plan.md
plans/2025-05-14_ux-improvements/: plan.md
plans/2026-05-13_discord_bot_system/: plan.md
plans/2026-05-14_autoresponder/: plan.md
plans/2026-05-14_discord-bot-features/: plan.md
plans/2026-05-14_new-features/: plan.md
plans/2026-05-14_ticket-system/: plan.md
scripts/: check-prefix-bridge.js  check-syntax.js  check_dashboard.py  create-admin.js  generate-fun-commands.js  generate-otaku-reactions.js  run-services.js  upload-application-emojis.js
src/: App.tsx  index.css  main.tsx  types.ts
src/api/: auth.py  deps.py  railway.py  routes.py
src/bot/: base_cog.py  config.js  config.logs.js  dashboardApi.js  embed_utils.py  emojis.json  feature_utils.py  i18n.py  index.js  manager.py  rank_card.py  (+1 more)
tasks/: three_features.json
tests/: test_premium.py
web/: .gitignore  docker-compose.piston.yml  package-lock.json  package.json
(+1238 files in other folders)
